jenkins/server/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "jenkins-ingress"
  labels:
    app: "jenkins"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: "change-it"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: "jenkins"
              servicePort: 8080
